# meson-build-example

./: .gitignore  README.md  meson.build  pyproject.toml
c/: multiplication.c
cython/: core.c  cyth_core.pxd  cyth_core.pyx
fortran/: addition.f90
mytestlib/: c_wrapper.py  cython_wrapper.py  fortran_wrapper.py
tests/: test.py  test_all.py
